Fix spacing for 'Meet the Students' section

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -49,7 +49,7 @@ body {
 
 #students h2 {
     font-size: 3rem;
-    margin: 3rem 3rem 3rem 2rem;
+    margin: 3rem 0;
 }
 
 #students {
@@ -112,6 +112,7 @@ body {
     background-color: #176ead;
     color: #fff;
     border-radius: 0;
+    margin: 0 0.5rem;
 }
 
 .button {
